--- a/releases/v0.14.8.yaml
+++ b/releases/v0.14.8.yaml
@@ -2,6 +2,7 @@
 version: v0.14.8
 name: 0.14.8
 branch: release-0.14
-status: shipyard
+status: admiral
 components:
   shipyard: 86b355552b7016693450272a34f31f1b1e4bc64b
+  admiral: 1f60dd32c2f86601f304384a90dfdc84df227eee
