--- a/releases/v0.19.0-m1.yaml
+++ b/releases/v0.19.0-m1.yaml
@@ -1,6 +1,7 @@
 ---
 version: v0.19.0-m1
 name: 0.19.0-m1
-status: shipyard
+status: admiral
 components:
   shipyard: edf55a1d1efd84092406da2efd1ae00234b908d1
+  admiral: 2cbaa2268514ed3d33a7be67acb0683342423e1c
