--- a/releases/v0.19.0-m1.yaml
+++ b/releases/v0.19.0-m1.yaml
@@ -1,7 +1,7 @@
 ---
 version: v0.19.0-m1
 name: 0.19.0-m1
-status: installers
+status: released
 components:
   shipyard: edf55a1d1efd84092406da2efd1ae00234b908d1
   admiral: 2cbaa2268514ed3d33a7be67acb0683342423e1c
@@ -9,3 +9,5 @@ components:
   lighthouse: 39c6f3b04306b176d7fbf913bbe70272ad48fb82
   submariner: be908fb9f116417fb9e350a1895adc5f39ed196f
   submariner-operator: b96ec6635978810bc48911021a34cec73c5639e8
+  subctl: 7ae6e2e0483ffbb72c51c37b62f69058b713b88c
+  submariner-charts: 9376b31107fe9b57b9ef36318d58dcc016de2a03
