--- a/releases/v0.15.5.yaml
+++ b/releases/v0.15.5.yaml
@@ -2,6 +2,7 @@
 version: v0.15.5
 name: 0.15.5
 branch: release-0.15
-status: shipyard
+status: admiral
 components:
   shipyard: 2b51dcd1982eae5c17cffaea11638fb61b40f800
+  admiral: af5192e27e7dabb1f446b12086bc279d644e58ef
