--- a/releases/v0.14.9.yaml
+++ b/releases/v0.14.9.yaml
@@ -2,6 +2,7 @@
 version: v0.14.9
 name: 0.14.9
 branch: release-0.14
-status: shipyard
+status: admiral
 components:
   shipyard: d0e0f75ebe9fa4de7f9cc27237b6575a12a6419c
+  admiral: 1921baa87f79526a6ea49a070402bd86c76496bf
