--- a/releases/v0.14.9.yaml
+++ b/releases/v0.14.9.yaml
@@ -2,7 +2,10 @@
 version: v0.14.9
 name: 0.14.9
 branch: release-0.14
-status: admiral
+status: projects
 components:
   shipyard: d0e0f75ebe9fa4de7f9cc27237b6575a12a6419c
   admiral: 1921baa87f79526a6ea49a070402bd86c76496bf
+  cloud-prepare: 85e83b5ff80b42850556584e078aee28aa90a22e
+  lighthouse: 437a4c25bf5482cda85c8761eed1da1d815ecafb
+  submariner: 0b3f8c22d07f8048d33f13615f9b558438541eba
