--- a/releases/v0.14.9.yaml
+++ b/releases/v0.14.9.yaml
@@ -2,7 +2,7 @@
 version: v0.14.9
 name: 0.14.9
 branch: release-0.14
-status: installers
+status: released
 components:
   shipyard: d0e0f75ebe9fa4de7f9cc27237b6575a12a6419c
   admiral: 1921baa87f79526a6ea49a070402bd86c76496bf
@@ -11,3 +11,4 @@ components:
   submariner: 0b3f8c22d07f8048d33f13615f9b558438541eba
   submariner-charts: 6ceec753c9e0deed66dacec679536368bb7bacd8
   submariner-operator: e66da70e0a58aea252c2bc3d5719e6820f12ce79
+  subctl: 9e0d59cb9112a5e8c6b0a3036d606ad2da08744b
