--- a/releases/v0.19.0-m2.yaml
+++ b/releases/v0.19.0-m2.yaml
@@ -1,6 +1,7 @@
 ---
 version: v0.19.0-m2
 name: 0.19.0-m2
-status: shipyard
+status: admiral
 components:
   shipyard: ca52afa11f93935d7bcff360ff7b3e6ffb39bf2a
+  admiral: ca2f50fd81f9a20df5425311647e0dc3076772e9
