--- a/releases/v0.19.0-m2.yaml
+++ b/releases/v0.19.0-m2.yaml
@@ -1,7 +1,10 @@
 ---
 version: v0.19.0-m2
 name: 0.19.0-m2
-status: admiral
+status: projects
 components:
   shipyard: ca52afa11f93935d7bcff360ff7b3e6ffb39bf2a
   admiral: ca2f50fd81f9a20df5425311647e0dc3076772e9
+  cloud-prepare: 25524683bb24d9afd34e911e8d8bef772f27c872
+  lighthouse: 4cc9d6710dff11e32d6ebd359a00f8bb43c7e91f
+  submariner: 024fbd3263ed181c1e55171b4259bdc01d707efd
